syntax = "proto3";

option java_package = "com.poc.apistyles.adapter.grpc.protobuf";
option java_multiple_files = true;

package com.poc.apistyles.grpc;

service OrderService {
    rpc GetOrder(GetOrderRequest) returns (OrderResponse);
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc UpdateStatus(UpdateStatusRequest) returns (OrderResponse);
    rpc ConfirmOrder(ConfirmOrderRequest) returns (OrderResponse);
    rpc ShipOrder(ShipOrderRequest) returns (OrderResponse);
    rpc DeliverOrder(DeliverOrderRequest) returns (OrderResponse);
    rpc CancelOrder(CancelOrderRequest) returns (OrderResponse);
}

message GetOrderRequest {
    string id = 1;
}

message CreateOrderRequest {
    string customer_id = 1;
    repeated OrderItemRequest items = 2;
}

message OrderItemRequest {
    string product_id = 1;
    int32 quantity = 2;
    double unit_price = 3;
}

message UpdateStatusRequest {
    string id = 1;
    string status = 2;
}

message ConfirmOrderRequest {
    string id = 1;
}

message ShipOrderRequest {
    string id = 1;
}

message DeliverOrderRequest {
    string id = 1;
}

message CancelOrderRequest {
    string id = 1;
}

message OrderResponse {
    string id = 1;
    string customer_id = 2;
    string status = 3;
    double total = 4;
    repeated OrderItemResponse items = 5;
    string created_at = 6;
    string updated_at = 7;
}

message OrderItemResponse {
    string product_id = 1;
    int32 quantity = 2;
    double unit_price = 3;
    double subtotal = 4;
}
